// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioSchedule should render ltr radio schedules correctly 1`] = `
.c3 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.725rem;
  height: 0.725rem;
}

.c15 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c9 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c9:hover,
.c9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:visited {
  color: #6E6E73;
}

.c10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  position: relative;
  border: 0.0625rem solid transparent;
}

.c7 {
  padding: 0 0.5rem;
}

.c8 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #222222;
  margin: 0;
}

.c19 {
  font-family: ReithSerif,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #6E6E73;
  margin: 0;
}

.c17 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #B80000;
}

.c20 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
  color: #11708C;
}

.c11 {
  color: #3F3F42;
  padding: 0.5rem 0;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c21 {
  color: #6E6E73;
  padding: 0.5rem 0;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.25rem;
}

.c12 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.9375rem;
  line-height: 1.125rem;
  color: #6E6E73;
  padding-bottom: 1rem;
  margin: 0;
}

.c13 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #222222;
  color: #FFFFFF;
  border-top: 1px solid transparent;
}

.c18 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #B80000;
  color: #FFFFFF;
  border-top: 1px solid transparent;
}

.c22 {
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #FFFFFF;
  color: #11708C;
  border-top: 1px solid transparent;
}

.c14 > svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.c23 > svg {
  color: #11708C;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.c16 {
  padding-left: 0.5rem;
}

.c5 {
  font-size: 0.875rem;
  line-height: 1.125rem;
  color: #6E6E73;
  display: block;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 0.25rem;
}

.c2 > svg {
  color: #5A5A5A;
  margin: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.c4 > time {
  color: #5A5A5A;
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: ReithSans,Helvetica,Arial,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c4::after {
  content: '';
  border-top: 0.0625rem solid #AEAEB5;
  top: 1rem;
  margin-left: 0.625rem;
  width: 100%;
}

.c0 {
  padding: 1rem 0 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c20 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c11 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:37.5rem) {
  .c21 {
    font-size: 1rem;
    line-height: 1.25rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c12 {
    font-size: 0.9375rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c12 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c13 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c13 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c18 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c18 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c22 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c22 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 0.875rem;
    line-height: 1.125rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 0.8125rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c4 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        dir="ltr"
      >
        <svg
          aria-hidden="true"
          class="c3"
          focusable="false"
          height="13"
          viewBox="0 0 13 13"
          width="13"
        >
          <path
            d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
          />
          <path
            d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        class="c4"
        dir="ltr"
      >
        <time
          class="c5"
          datetime="2019-08-27"
        >
          14:54
        </time>
      </span>
    </div>
  </div>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <h3
        class="c8"
      >
        <a
          class="c9"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            class=""
            role="text"
          >
            <span>
              Could a computer ever create better art than a human?
            </span>
            <span
              class="c10"
            >
              , 
              13:00
              , 
            </span>
            <span
              class="c11"
            >
              29/01/1990
            </span>
          </span>
        </a>
      </h3>
      <p
        class="c12"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="c13"
    >
      <span
        class="c14"
      >
        <svg
          aria-hidden="true"
          class="c15"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="c16"
        dir="ltr"
      >
        <span
          class="c10"
        >
           Duration 45,00 
        </span>
        <span
          aria-hidden="true"
          class="Duration0 "
        >
          45:00
        </span>
      </time>
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        dir="ltr"
      >
        <svg
          aria-hidden="true"
          class="c3"
          focusable="false"
          height="13"
          viewBox="0 0 13 13"
          width="13"
        >
          <path
            d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
          />
          <path
            d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        class="c4"
        dir="ltr"
      >
        <time
          class="c5"
          datetime="2019-08-27"
        >
          14:54
        </time>
      </span>
    </div>
  </div>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <h3
        class="c8"
      >
        <a
          class="c9"
          href="/news/articles/cn7k01xp8kxo"
        >
          <span
            class=""
            role="text"
          >
            <span
              aria-hidden="true"
              class="c17"
            >
              LIVE
            </span>
            <span
              class="c10"
              lang="en-GB"
            >
               Live
              ,
            </span>
            <span>
               
              Could a computer ever create better art than a human?
            </span>
            <span
              class="c10"
            >
              , 
              13:00
              , 
            </span>
            <span
              class="c11"
            >
              29/01/1990
            </span>
          </span>
        </a>
      </h3>
      <p
        class="c12"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="c18"
    >
      <span
        class="c14"
      >
        <svg
          aria-hidden="true"
          class="c15"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="c16"
        dir="ltr"
      >
        <span
          class="c10"
        >
           Duration 45,00 
        </span>
        <span
          aria-hidden="true"
          class="Duration0 "
        >
          45:00
        </span>
      </time>
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        dir="ltr"
      >
        <svg
          aria-hidden="true"
          class="c3"
          focusable="false"
          height="13"
          viewBox="0 0 13 13"
          width="13"
        >
          <path
            d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
          />
          <path
            d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        class="c4"
        dir="ltr"
      >
        <time
          class="c5"
          datetime="2019-08-27"
        >
          14:54
        </time>
      </span>
    </div>
  </div>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <h3
        class="c19"
      >
        <span
          class=""
          role="text"
        >
          <span
            class="c20"
          >
            NEXT
          </span>
          <span
            class="c10"
          >
            ,
          </span>
          <span>
             
            Could a computer ever create better art than a human?
          </span>
          <span
            class="c10"
          >
            , 
            13:00
            , 
          </span>
          <span
            class="c21"
          >
            29/01/1990
          </span>
        </span>
      </h3>
      <p
        class="c12"
      >
        The critic, author, poet and TV host was known for his witty commentary on international television.
      </p>
    </div>
    <div
      class="c22"
    >
      <span
        class="c23"
      >
        <svg
          aria-hidden="true"
          class="c15"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="c16"
        dir="ltr"
      >
        <span
          class="c10"
        >
           Duration 45,00 
        </span>
        <span
          aria-hidden="true"
          class="Duration0 "
        >
          45:00
        </span>
      </time>
    </div>
  </div>
</div>
`;

exports[`RadioSchedule should render rtl radio schedules correctly 1`] = `
.c3 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.725rem;
  height: 0.725rem;
}

.c15 {
  vertical-align: middle;
  margin: 0 0.25rem;
  color: #222222;
  fill: currentColor;
  width: 0.8125rem;
  height: 0.75rem;
}

.c9 {
  position: static;
  color: #222222;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c9:before {
  bottom: 0;
  content: '';
  left: 0;
  overflow: hidden;
  position: absolute;
  right: 0;
  top: 0;
  white-space: nowrap;
  z-index: 1;
}

.c9:hover,
.c9:focus {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.c9:visited {
  color: #6E6E73;
}

.c10 {
  -webkit-clip-path: inset(100%);
  clip-path: inset(100%);
  -webkit-clip: rect(1px,1px,1px,1px);
  clip: rect(1px,1px,1px,1px);
  height: 1px;
  overflow: hidden;
  position: absolute;
  width: 1px;
  margin: 0;
}

.c6 {
  padding-top: 0.5rem;
  background-color: #FFFFFF;
  position: relative;
  border: 0.0625rem solid transparent;
}

.c7 {
  padding: 0 0.5rem;
}

.c8 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #222222;
  margin: 0;
}

.c19 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #6E6E73;
  margin: 0;
}

.c17 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #B80000;
}

.c20 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 700;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
  color: #11708C;
}

.c11 {
  color: #3F3F42;
  padding: 0.5rem 0;
  display: block;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
}

.c21 {
  color: #6E6E73;
  padding: 0.5rem 0;
  display: block;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1rem;
  line-height: 1.625rem;
}

.c12 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 1.0625rem;
  line-height: 1.5rem;
  color: #6E6E73;
  padding-bottom: 1rem;
  margin: 0;
}

.c13 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #222222;
  color: #FFFFFF;
  border-top: 1px solid transparent;
}

.c18 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #B80000;
  color: #FFFFFF;
  border-top: 1px solid transparent;
}

.c22 {
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
  font-size: 0.75rem;
  line-height: 1rem;
  padding: 0.5rem;
  background-color: #FFFFFF;
  color: #11708C;
  border-top: 1px solid transparent;
}

.c14 > svg {
  color: #FFFFFF;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.c23 > svg {
  color: #11708C;
  fill: currentColor;
  width: 1.0625rem;
  height: 1rem;
  margin: 0;
}

.c16 {
  padding-right: 0.5rem;
}

.c5 {
  font-size: 1rem;
  line-height: 1.25rem;
  color: #6E6E73;
  display: block;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 0.25rem;
}

.c2 > svg {
  color: #5A5A5A;
  margin: 0;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  width: 100%;
}

.c4 > time {
  color: #5A5A5A;
  font-size: 0.75rem;
  line-height: 1rem;
  font-family: "BBC Nassim Arabic",Arial,Verdana,Geneva,Helvetica,sans-serif;
  font-weight: 400;
  font-style: normal;
}

.c4::after {
  content: '';
  border-top: 0.0625rem solid #AEAEB5;
  top: 1rem;
  margin-right: 0.625rem;
  width: 100%;
}

.c0 {
  padding: 1rem 0 0.5rem;
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c8 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c19 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c19 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c17 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c17 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c20 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c20 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c11 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c11 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c21 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:37.5rem) {
  .c21 {
    font-size: 1.25rem;
    line-height: 1.625rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c12 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c12 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c13 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c13 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c18 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c18 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c22 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c22 {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:37.5rem) {
  .c5 {
    font-size: 1.125rem;
    line-height: 1.5rem;
  }
}

@media (min-width:20rem) and (max-width:37.4375rem) {
  .c4 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

@media (min-width:37.5rem) {
  .c4 > time {
    font-size: 0.75rem;
    line-height: 1rem;
  }
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        dir="rtl"
      >
        <svg
          aria-hidden="true"
          class="c3"
          focusable="false"
          height="13"
          viewBox="0 0 13 13"
          width="13"
        >
          <path
            d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
          />
          <path
            d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        class="c4"
        dir="rtl"
      >
        <time
          class="c5"
          datetime="2019-08-27"
        >
          ۱۴:۵۴
        </time>
      </span>
    </div>
  </div>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <h3
        class="c8"
      >
        <a
          class="c9"
          href="/arabic/articles/c1er5mjnznzo"
        >
          <span
            class=""
            role="text"
          >
            <span>
              لماذا يخجل البعض من اسم قريته في مصر؟
            </span>
            <span
              class="c10"
            >
              , 
              13:00
              , 
            </span>
            <span
              class="c11"
            >
              29/01/1990
            </span>
          </span>
        </a>
      </h3>
      <p
        class="c12"
      >
        هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
      </p>
    </div>
    <div
      class="c13"
    >
      <span
        class="c14"
      >
        <svg
          aria-hidden="true"
          class="c15"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="c16"
        dir="rtl"
      >
        <span
          class="c10"
        >
           Duration 45,00 
        </span>
        <span
          aria-hidden="true"
          class="Duration0 "
        >
          45:00
        </span>
      </time>
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        dir="rtl"
      >
        <svg
          aria-hidden="true"
          class="c3"
          focusable="false"
          height="13"
          viewBox="0 0 13 13"
          width="13"
        >
          <path
            d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
          />
          <path
            d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        class="c4"
        dir="rtl"
      >
        <time
          class="c5"
          datetime="2019-08-27"
        >
          ۱۴:۵۴
        </time>
      </span>
    </div>
  </div>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <h3
        class="c8"
      >
        <a
          class="c9"
          href="/arabic/articles/c1er5mjnznzo"
        >
          <span
            class=""
            role="text"
          >
            <span
              aria-hidden="true"
              class="c17"
            >
              LIVE
            </span>
            <span
              class="c10"
              lang="en-GB"
            >
               Live
              ,
            </span>
            <span>
               
              لماذا يخجل البعض من اسم قريته في مصر؟
            </span>
            <span
              class="c10"
            >
              , 
              13:00
              , 
            </span>
            <span
              class="c11"
            >
              29/01/1990
            </span>
          </span>
        </a>
      </h3>
      <p
        class="c12"
      >
        هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
      </p>
    </div>
    <div
      class="c18"
    >
      <span
        class="c14"
      >
        <svg
          aria-hidden="true"
          class="c15"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="c16"
        dir="rtl"
      >
        <span
          class="c10"
        >
           Duration 45,00 
        </span>
        <span
          aria-hidden="true"
          class="Duration0 "
        >
          45:00
        </span>
      </time>
    </div>
  </div>
  <div
    class="c0"
  >
    <div
      class="c1"
    >
      <span
        class="c2"
        dir="rtl"
      >
        <svg
          aria-hidden="true"
          class="c3"
          focusable="false"
          height="13"
          viewBox="0 0 13 13"
          width="13"
        >
          <path
            d="M6.5 0A6.5 6.5 0 1013 6.5 6.5 6.5 0 006.5 0zm0 11.5a5 5 0 115-5 5 5 0 01-5 5z"
          />
          <path
            d="M7.34 2.9h-1v3.8L9.4 8.57l.41-.56-2.47-1.89V2.9z"
          />
        </svg>
      </span>
      <span
        aria-hidden="true"
        class="c4"
        dir="rtl"
      >
        <time
          class="c5"
          datetime="2019-08-27"
        >
          ۱۴:۵۴
        </time>
      </span>
    </div>
  </div>
  <div
    class="c6"
  >
    <div
      class="c7"
    >
      <h3
        class="c19"
      >
        <span
          class=""
          role="text"
        >
          <span
            class="c20"
          >
            NEXT
          </span>
          <span
            class="c10"
          >
            ,
          </span>
          <span>
             
            لماذا يخجل البعض من اسم قريته في مصر؟
          </span>
          <span
            class="c10"
          >
            , 
            13:00
            , 
          </span>
          <span
            class="c21"
          >
            29/01/1990
          </span>
        </span>
      </h3>
      <p
        class="c12"
      >
        هناك وقائع عدة تتسم بالسخرية والجدل والتنمر، ضد أهل القرية الذين أصابهم الغضب والسخط مما دفعهم إلى تقديم طلب لتغيير اسم قريتهم.
      </p>
    </div>
    <div
      class="c22"
    >
      <span
        class="c23"
      >
        <svg
          aria-hidden="true"
          class="c15"
          focusable="false"
          height="12px"
          viewBox="0 0 13 12"
          width="13px"
        >
          <path
            d="M9.021 1.811l-.525.525c.938.938 1.5 2.25 1.5 3.675s-.563 2.738-1.5 3.675l.525.525c1.05-1.087 1.725-2.55 1.725-4.2s-.675-3.112-1.725-4.2z"
          />
          <path
            d="M10.596.199l-.525.562c1.35 1.35 2.175 3.225 2.175 5.25s-.825 3.9-2.175 5.25l.525.525c1.5-1.462 2.4-3.525 2.4-5.775s-.9-4.312-2.4-5.812zM6.996 1.511l-2.25 2.25H.996v4.5h3.75l2.25 2.25z"
          />
        </svg>
      </span>
      <time
        class="c16"
        dir="rtl"
      >
        <span
          class="c10"
        >
           Duration 45,00 
        </span>
        <span
          aria-hidden="true"
          class="Duration0 "
        >
          45:00
        </span>
      </time>
    </div>
  </div>
</div>
`;
